--- a/pom.xml
+++ b/pom.xml
@@ -25,9 +25,9 @@
         </dependency>
 
         <dependency>
-            <groupId>org.postgresql</groupId>
-            <artifactId>postgresql</artifactId>
-            <scope>runtime</scope>
+            <groupId>org.neo4j.driver</groupId>
+            <artifactId>neo4j-java-driver-spring-boot-starter</artifactId>
+            <version>4.0.0-beta02</version>
         </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
