--- a/FrontEnd/package.json
+++ b/FrontEnd/package.json
@@ -8,6 +8,7 @@
     "material-ui": "^1.0.0-beta.47",
     "react": "^16.10.2",
     "react-dom": "^16.10.2",
+    "react-router-dom": "^5.1.2",
     "react-scripts": "3.2.0",
     "react-tap-event-plugin": "^3.0.3",
     "styled-components": "^4.4.0"
