--- a/FrontEnd/package.json
+++ b/FrontEnd/package.json
@@ -11,6 +11,7 @@
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.2.0",
     "react-tap-event-plugin": "^3.0.3",
+    "request": "^2.88.0",
     "styled-components": "^4.4.0"
   },
   "scripts": {
