--- a/FrontEnd/package.json
+++ b/FrontEnd/package.json
@@ -7,6 +7,7 @@
     "@material-ui/styles": "^4.5.0",
     "axios": "^0.19.0",
     "material-ui": "^1.0.0-beta.47",
+    "package.json": "^2.0.1",
     "react": "^16.10.2",
     "react-dom": "^16.10.2",
     "react-router-dom": "^5.1.2",
