--- a/FrontEnd/.gitignore
+++ b/FrontEnd/.gitignore
@@ -19,3 +19,20 @@
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+
+### IntelliJ IDEA ###
+.idea
+*.iws
+*.iml
+*.ipr
+
+### NetBeans ###
+/nbproject/private/
+/nbbuild/
+/dist/
+/nbdist/
+/.nb-gradle/
+build/
+
+### VS Code ###
+.vscode/
