--- a/FrontEnd/package.json
+++ b/FrontEnd/package.json
@@ -3,10 +3,14 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@date-io/date-fns": "^1.3.11",
     "@material-ui/core": "^4.5.1",
+    "@material-ui/pickers": "^3.2.7",
     "@material-ui/styles": "^4.5.0",
     "axios": "^0.19.0",
+    "date-fns": "^2.6.0",
     "material-ui": "^1.0.0-beta.47",
+    "moment": "^2.24.0",
     "package.json": "^2.0.1",
     "react": "^16.10.2",
     "react-dom": "^16.10.2",
