--- a/FrontEnd/package.json
+++ b/FrontEnd/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@date-io/date-fns": "^1.3.11",
     "@material-ui/core": "^4.5.1",
+    "@material-ui/icons": "^4.5.1",
     "@material-ui/pickers": "^3.2.7",
     "@material-ui/styles": "^4.5.0",
     "axios": "^0.19.0",
