--- a/FrontEnd/package.json
+++ b/FrontEnd/package.json
@@ -10,6 +10,7 @@
     "axios": "^0.19.0",
     "date-fns": "^2.6.0",
     "material-ui": "^1.0.0-beta.47",
+    "material-ui-dropzone": "^2.4.5",
     "moment": "^2.24.0",
     "package.json": "^2.0.1",
     "react": "^16.10.2",
