--- a/FrontEnd/package.json
+++ b/FrontEnd/package.json
@@ -13,6 +13,7 @@
     "material-ui": "^1.0.0-beta.47",
     "moment": "^2.24.0",
     "package.json": "^2.0.1",
+    "prop-types": "^15.7.2",
     "react": "^16.10.2",
     "react-cookie": "^4.0.1",
     "react-dom": "^16.10.2",
@@ -42,5 +43,13 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "eslint": "^6.6.0",
+    "eslint-config-airbnb": "^18.0.1",
+    "eslint-plugin-import": "^2.18.2",
+    "eslint-plugin-jsx-a11y": "^6.2.3",
+    "eslint-plugin-react": "^7.16.0",
+    "eslint-plugin-react-hooks": "^1.7.0"
   }
 }
