--- a/FrontEnd/package.json
+++ b/FrontEnd/package.json
@@ -10,6 +10,7 @@
     "@material-ui/styles": "^4.5.0",
     "axios": "^0.19.0",
     "date-fns": "^2.6.0",
+    "is-url": "^1.2.4",
     "material-ui": "^1.0.0-beta.47",
     "moment": "^2.24.0",
     "package.json": "^2.0.1",
